# goik

./: .gitignore  README.md
esp32/: README.md
esp32/udp_dxl/: partitions.csv  sdkconfig
esp32/udp_dxl/main/: CMakeLists.txt  Kconfig.projbuild  dxl_task.cpp  dxl_task.h  file_system.cpp  file_system.h  idf_component.yml  main.cpp  message.cpp  message.h  udp_server_task.cpp  udp_server_task.h
goik/: README.md  ROADMAP.md  TODO.txt  cpu.pprof  go.mod  go.sum  h1.hex  h2.hex  main.go
goik/cmd/: dummyrobotserver.go
goik/comms/: networkController.go
goik/doc/: DH-parameters-drawio.drawio
goik/robot/: bodyDefinition.go  coordinate.go  examplePods.go  gaits.go  leg.go  matrix.go  motionPrimitive.go  pod.go  servoAngle.go  solver.go
goik/simulator/: commands.go  shell.go  simulator.go
goik/views/: gaitview.go  isoview.go  views.go  xyview.go  xzview.go
